ccg_bot_sys/src/tests/nonstable_fail_item_type.rs
use ccg_bot_sys::nonstable;

#[nonstable(feature = "nonstable-testing")]
use std::collections::HashMap;

pub fn main() {
  let _ = ();
}